--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <title>My Cat</title>
     <link rel="stylesheet" href="app.css" />
-    <script src="app.js" ddfer></script>
+    <script src="app.js" defer></script>
 </head>
 
 <body>
